fixed z-index of mobile menu

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ a{cursor: pointer;}
 #main .main-info .link-btn a{padding:15px 35px;border-radius: 50px;border: 1px solid #fff;font-weight: 400;display: block;text-align: center;}
 #main .main-info .link-btn a:hover{color: #000;background-color: #fff}
 #main .offer-btn:hover{box-shadow: 0px 0px 15px 2px rgba(255,255,255,0.65);}
+#main .swiper-container {min-height:568px }
 
 /* OFFER */
 
@@ -652,7 +653,7 @@ a{cursor: pointer;}
 /* SOCIAL */
 
 #social{padding: 150px 0;position: relative;}
-#social span{width: 100%;display: block;position: relative;z-index: 10}
+#social span{width: 100%;display: block;position: relative;}
 #social h2, #social span{text-align: center;}
 #social .social-img{position: absolute;left: -110px;top: 90px;z-index:-1;}
 #social .social-img.capusta{left: unset;right: 0;height: 430px;width:430px;background-image: url(../img/social2.png);background-position: 190px center;background-repeat: no-repeat;}
@@ -832,14 +833,14 @@ a{cursor: pointer;}
 	#main h1{text-align: left;padding: 0 15px;font-size: 34px;line-height: 50px;}
 	#main .offer-btn{margin: 50px 15px;border:none;box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.55);}
 	#main .social{display: none;}
-	.mobile-main-info{position: fixed;display: block;width: 100%;z-index: 20; background-color: rgba(0,0,0,0.7); height: 100px;}
+	.mobile-main-info{transition: all 0.5s ease;position: fixed;display: block;width: 100%;z-index: 2000000; background-color: rgba(0,0,0,0.7); height: 100px;}
 	.mobile-main-info ul{padding: 25px 15px;margin: 0;display: inline-flex;list-style-type: none;width: 100%}
 	.mobile-main-info ul li:nth-child(1){width: 30%;}
 	.mobile-main-info ul li:nth-child(2){width: 52.5%;padding-top: 7px;}
 	.mobile-main-info ul li:nth-child(3){width: 20%}
 	.mobile-main-info ul li h4{font-size: 16px;text-align: right;}
 	.mobile-main-info a{color: #fff}
-    .bars-btn{display:block;position: fixed;width: 40px;height: 40px;right: 15px;top: 37px;z-index: 10000}
+    .bars-btn{display:block;position: fixed;width: 40px;height: 40px;right: 15px;top: 37px;}
 	.bars-btn img{width: 100%;transition: 0.2s;position: absolute;}
 	#main .logo-li img{width: 80%;top: -13px;position: relative;}
 	#main .main-next, #main .main-prev{display: none;}
@@ -1026,4 +1027,16 @@ a{cursor: pointer;}
 	.slider_conatiner {
 		height: auto;
 	}
+
+	#also .swiper-container, #also .swiper-wrapper,
+	#own .swiper-container, #own .swiper-wrapper, 
+	#also .swiper-button-next, #also .swiper-button-prev,
+	#also .swiper-pagination, #own .swiper-pagination,
+	#own .swiper-button-next, #own .swiper-button-prev,
+	#trust .swiper-container, #trust .swiper-wrapper,
+	#main .swiper-container, #main .swiper-wrapper  {
+		z-index: auto;
+	}
+
+	.bars-btn {z-index: 2000001;}
 }
